@@ -9,7 +9,7 @@ AM_CPPFLAGS = \
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 
-bin_PROGRAMS = opreport opannotate opdiff opgprof
+bin_PROGRAMS = opreport opannotate opgprof
 
 LIBS=@POPT_LIBS@ @BFD_LIBS@
 
@@ -24,23 +24,17 @@ common_libs =  \
 	../libutil/libutil.a \
 	../libdb/libodb.a
 
-opannotate_SOURCES = opannotate.cpp \
-	opannotate_options.h opannotate_options.cpp \
-	$(pp_commons)
-opannotate_LDADD = $(common_libs)
-
-opdiff_SOURCES = opdiff.cpp \
-	opdiff_options.h opdiff_options.cpp \
-	$(pp_commons)
-opdiff_LDADD = $(common_libs)
-
-opgprof_SOURCES = opgprof.cpp \
-	opgprof_options.h opgprof_options.cpp \
-	$(pp_commons)
-opgprof_LDADD = $(common_libs)
-
 opreport_SOURCES = opreport.cpp \
 	opreport_options.h opreport_options.cpp \
 	$(pp_commons)
 opreport_LDADD = $(common_libs)
 
+opannotate_SOURCES = opannotate.cpp \
+	opannotate_options.h opannotate_options.cpp \
+	$(pp_commons)
+opannotate_LDADD = $(common_libs)
+
+opgprof_SOURCES = opgprof.cpp \
+	opgprof_options.h opgprof_options.cpp \
+	$(pp_commons)
+opgprof_LDADD = $(common_libs)
